Se agregó funcionalidad.
Al hacer click en un punto se genera una isocrona de 1Km (caminando) y se cuenta la cantidad de escuelas registradas en el DENUE. 
El resultado aparece en el popup.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"> <!-- Define el conjunto de caracteres -->
     <title>Geodata Urbana - Inmuebles residenciales</title> <!-- Título de la página -->
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no"> <!-- Configura la vista para dispositivos móviles -->
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=yes"> <!-- Configura la vista para dispositivos móviles -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet"> <!-- Incluye el CSS de Mapbox -->
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script> <!-- Incluye el JS de Mapbox -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> <!-- Incluye la fuente Montserrat -->
