--- a/index.html
+++ b/index.html
@@ -546,9 +546,11 @@
                                             Edad: ${properties.Edad}<br>
                                             Baños: ${properties.Baños}<br>
                                             Estacionamiento: ${properties.Estacionam}<br>
-                                            <strong style="color: #144afc;">Escuelas a 1 Km: ${schoolsCount}</strong><br>
-                                            <strong style="color: #f50000;">Servicios de salud a 1 Km: ${saludCount}</strong><br>
-                                            <strong style="color: #ffd907;">Abarrotes a 1 Km: ${abarrotesCount}</strong>
+                                            <strong style="font-size: 14px;"> Servicios a 1 Km caminando</strong><br>
+                                            <strong style="color: #144afc;">Servicios educativos: ${schoolsCount}</strong><br>
+                                            <strong style="color: #f50000;">Servicios de salud: ${saludCount}</strong><br>
+                                            <strong style="color: #ffd907;">Abarrotes y misceláneas: ${abarrotesCount}</strong><br>
+                                            
                                         </div>
                                     </div>
                                 `;
